--- a/SitePessoal.html
+++ b/SitePessoal.html
@@ -25,7 +25,7 @@
         </article>
     </section>
     <footer>
-        <ul>
+        <ul class="contacts_list">
             <li>
                 <a href="mailto:matheusmouradasilva2018@gmail.com">matheusmouradasilva2018@gmail.com</a>
             </li>
